--- a/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
+++ b/Aarppo/app/src/main/res/layout/custom_list_match_schedule.xml
@@ -8,65 +8,72 @@
     card_view:cardElevation="3dp"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryDark"
-
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary"
         android:weightSum="1">
 
+        <ImageView
+            android:layout_width="138dp"
+            android:layout_height="70dp"
+            android:id="@+id/img_team1"
+            android:src="@drawable/team1"
+            android:layout_above="@+id/team1"
+            android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="TEAM 1"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/team1"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
+        <ImageView
+            android:layout_width="138dp"
+            android:layout_height="70dp"
+            android:src="@drawable/team2"
+            android:id="@+id/img_team2"
+            android:gravity="center"
+            android:layout_above="@+id/team2"
+            android:layout_alignParentEnd="true" />
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_marginLeft="20dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:text="TEAM2"
+            android:id="@+id/team2"
+            android:layout_centerVertical="true"
+            android:layout_alignStart="@+id/img_team2" />
+        <TextView
+            android:gravity="center"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="110sp"
-            android:layout_alignParentTop="true"
-            android:id="@+id/topLayout"
-            android:layout_alignParentStart="true">
-
-            <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="110dp"
-            android:orientation="vertical"
-            android:background="@color/colorPrimary"
-            android:id="@+id/linearLayout2"
-            android:layout_alignParentTop="true"
+            android:maxLines="4"
+            android:lines="4"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
+            android:text="ground"
+            android:id="@+id/txt_ground"
+            android:layout_below="@+id/linearLayout"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/linearLayout"
-                android:weightSum="1">
-
-                <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="79dp"
-                android:id="@+id/img_team1"
-                android:layout_alignParentTop="true"
-                android:src="@drawable/team1"
-                android:layout_alignParentStart="true" />
-
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="TEAM 1"
-                    android:textStyle="bold"
-                    android:textColor="#ffffff"
-                    android:layout_marginLeft="20dp"
-                    android:id="@+id/team1"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" />
-
-
-            </LinearLayout>
+            android:layout_alignParentEnd="true" />
 
         <RelativeLayout
-            android:layout_width="100dp"
-            android:layout_height="110dp"
+            android:layout_width="60dp"
+            android:layout_height="100dp"
             android:orientation="vertical"
             android:background="@color/colorPrimaryDark"
+            android:layout_marginLeft="5dp"
             android:id="@+id/linearLayout"
-
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
             <TextView
                 android:layout_width="match_parent"
@@ -75,6 +82,7 @@
                 android:textColor="@color/colorPrimary"
                 android:text="Date and Time"
                 android:gravity="center"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 android:id="@+id/tv_name"
                 android:layout_above="@+id/txt_mnth"
@@ -85,6 +93,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="month"
+                android:gravity="center"
+                android:textSize="20dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
@@ -97,66 +107,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="time"
+                android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/colorPrimary"
                 android:id="@+id/txt_time"
                 android:layout_gravity="center_horizontal"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/txt_mnth"
                 android:layout_centerHorizontal="true" />
 
         </RelativeLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="110dp"
-                android:orientation="vertical"
-                android:background="@color/colorPrimary"
-                android:id="@+id/linearLayout3"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@+id/linearLayout"
-                android:weightSum="1">
-
-                <ImageView
-                    android:layout_width="138dp"
-                    android:layout_height="70dp"
-                    android:src="@drawable/team2"
-                    android:id="@+id/img_team2"
-                    android:gravity="center"
-                    android:layout_above="@+id/team2" />
-
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:layout_marginLeft="20dp"
-                    android:textStyle="bold"
-                    android:textColor="#ffffff"
-                    android:text="TEAM2"
-                    android:id="@+id/team2"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginTop="5sp" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:gravity="center"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:maxLines="4"
-            android:lines="4"
-            android:background="@color/colorPrimaryDark"
-            android:textColor="@color/colorPrimary"
-            android:text="ground"
-            android:id="@+id/txt_ground"
-
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
 
