--- a/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_islmatch_page.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="60sp"
-    android:layout_marginLeft="10sp"
-    android:layout_marginRight="10sp"
     tools:context="com.appstory.aarppo.ISLMatchPage">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,8 +12,60 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="left|bottom">
+        android:layout_gravity="center">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="days"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/textView4"
+            android:layout_marginStart="47dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hours"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/textView5"
+            android:layout_marginStart="42dp"
+            android:layout_above="@+id/txt_countDown"
+            android:layout_toEndOf="@+id/textView4" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="minutes"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/textView6"
+            android:layout_marginStart="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/textView5" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="seconds"
+            android:textColor="@color/colorAccent"
+            android:id="@+id/textView7"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/textView6"
+            android:layout_marginStart="28dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="00: 00 : 00 : 00"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:id="@+id/txt_countDown"
+            android:textSize="40sp"
+            android:elevation="3dp"
+            android:layout_below="@+id/textView4"
+            android:layout_alignParentStart="true" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,54 +75,7 @@
             android:textAlignment="center"
             android:layout_gravity="right"
             android:layout_below="@+id/txt_countDown"
-            android:layout_alignEnd="@+id/txt_countDown" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="days"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView4"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/txt_countDown" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hours"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView5"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/textView10" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00: 00 : 00 : 00"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:id="@+id/txt_countDown"
-            android:textSize="40sp"
-            android:layout_below="@+id/textView5"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="minutes"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView6"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView8" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="seconds"
-            android:textColor="@color/colorAccent"
-            android:id="@+id/textView7"
-            android:layout_alignParentTop="true"
-            android:layout_alignEnd="@+id/chk_Aarpo5" />
+            android:layout_alignStart="@+id/textView7" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,12 +85,11 @@
             android:lines="2"
             android:id="@+id/isl_team1"
             android:textStyle="bold"
+            android:textSize="20dp"
             android:textColor="@color/colorPrimary"
-            android:layout_marginTop="26dp"
-            android:layout_below="@+id/textView"
-            android:layout_alignStart="@+id/txt_countDown"
-            android:layout_toStartOf="@+id/textView10" />
-
+            android:layout_below="@+id/textView8"
+            android:layout_alignEnd="@+id/textView5"
+            android:layout_alignStart="@+id/textView4" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,137 +97,132 @@
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
             android:id="@+id/textView8"
-            android:layout_alignTop="@+id/isl_team1"
+            android:layout_marginTop="24dp"
+            android:layout_below="@+id/textView"
             android:layout_centerHorizontal="true" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Team2"
             android:textStyle="bold"
+            android:textSize="20dp"
             android:textColor="@color/colorPrimary"
             android:maxLines="2"
             android:lines="2"
             android:id="@+id/isl_team2"
-            android:layout_alignTop="@+id/textView8"
-            android:layout_alignEnd="@+id/txt_countDown"
+            android:layout_alignTop="@+id/isl_team1"
+            android:layout_alignEnd="@+id/textView"
             android:layout_toEndOf="@+id/textView6" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ground"
             android:textColor="@color/colorAccent"
             android:id="@+id/isl_ground"
-            android:layout_marginTop="19dp"
-            android:layout_below="@+id/textView8"
+            android:layout_below="@+id/isl_team2"
             android:layout_centerHorizontal="true" />
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="I am cheering"
+            android:gravity="center"
+            android:text="CHEERING TIMES"
+            android:textSize="25dp"
             android:id="@+id/textView9"
             android:textColor="@color/colorPrimary"
-            android:layout_above="@+id/textView10"
-            android:layout_alignEnd="@+id/textView10" />
+            android:layout_marginTop="49dp"
+            android:layout_below="@+id/isl_ground"
+            android:layout_alignParentStart="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:background="@color/colorPrimary"
+            android:layout_below="@+id/textView9"
+            android:layout_alignParentStart="true">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10th minute"
+                android:id="@+id/chk_Aarpo1"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"
+                android:layout_marginStart="42dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="25dp" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20th minute"
+                android:id="@+id/chk_Aarpo2"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"
+                android:layout_below="@+id/chk_Aarpo1"
+                android:layout_alignStart="@+id/chk_Aarpo1" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="30th minute"
+                android:id="@+id/chk_Aarpo3"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"
+                android:layout_below="@+id/chk_Aarpo2"
+                android:layout_alignStart="@+id/chk_Aarpo2" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="45th minute"
+                android:id="@+id/chk_Aarpo4"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"
+                android:layout_below="@+id/chk_Aarpo3"
+                android:layout_alignStart="@+id/chk_Aarpo3" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="50th minute"
+                android:id="@+id/chk_Aarpo5"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"
+                android:layout_marginStart="56dp"
+                android:layout_above="@+id/chk_Aarpo6"
+                android:layout_toEndOf="@+id/chk_Aarpo1" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="60th minute"
+                android:id="@+id/chk_Aarpo6"
+                android:layout_alignBottom="@+id/chk_Aarpo2"
+                android:layout_alignStart="@+id/chk_Aarpo5"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="75th minute"
+                android:id="@+id/chk_Aarpo7"
+                android:layout_alignTop="@+id/chk_Aarpo3"
+                android:layout_alignStart="@+id/chk_Aarpo6"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"/>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="85th minute"
+                android:id="@+id/chk_Aarpo8"
+                android:layout_alignBottom="@+id/chk_Aarpo4"
+                android:layout_alignStart="@+id/chk_Aarpo7"
+                android:checked="false"
+                android:textColor="#ffffff"
+                android:buttonTint="@color/colorPrimaryDark"/>
+        </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="I will sing at "
-            android:textColor="@color/colorPrimary"
-            android:id="@+id/textView10"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10th minute"
-            android:id="@+id/chk_Aarpo1"
-            android:layout_marginTop="24dp"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"
-            android:layout_below="@+id/textView10"
-            android:layout_toStartOf="@+id/textView9" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20th minute"
-            android:id="@+id/chk_Aarpo2"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"
-            android:layout_below="@+id/chk_Aarpo1"
-            android:layout_alignStart="@+id/chk_Aarpo1" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="30th minute"
-            android:id="@+id/chk_Aarpo3"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"
-            android:layout_below="@+id/chk_Aarpo2"
-            android:layout_alignStart="@+id/chk_Aarpo2" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="50th minute"
-            android:id="@+id/chk_Aarpo5"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"
-            android:layout_alignTop="@+id/chk_Aarpo1"
-            android:layout_toEndOf="@+id/textView8" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="60th minute"
-            android:id="@+id/chk_Aarpo6"
-            android:layout_alignBottom="@+id/chk_Aarpo2"
-            android:layout_alignStart="@+id/chk_Aarpo5"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="75th minute"
-            android:id="@+id/chk_Aarpo7"
-            android:layout_alignTop="@+id/chk_Aarpo3"
-            android:layout_alignStart="@+id/chk_Aarpo6"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="45th minute"
-            android:id="@+id/chk_Aarpo4"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"
-            android:layout_below="@+id/chk_Aarpo3"
-            android:layout_alignStart="@+id/chk_Aarpo3" />
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="85th minute"
-            android:id="@+id/chk_Aarpo8"
-            android:layout_alignBottom="@+id/chk_Aarpo4"
-            android:layout_alignStart="@+id/chk_Aarpo7"
-            android:checked="false"
-            android:textColor="@color/colorAccent"
-            android:buttonTint="@color/colorPrimaryDark"/>
     </RelativeLayout>
 </FrameLayout>
