--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -14,6 +14,10 @@
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_library_music"
             android:title="Blasters' Song Lyrics" />
+        <item
+            android:id="@+id/nav_howtouse"
+            android:icon="@drawable/ic_help"
+            android:title="How to use?" />
     </group>
 
     <item android:title="Communicate">
