--- a/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_contact_us.xml
@@ -66,8 +66,7 @@
         android:gravity="center"
         android:textSize="15dp"
         android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
-        android:layout_alignEnd="@+id/textView4" />
+        android:layout_alignStart="@+id/textView7" />
 
 
 </RelativeLayout>
