--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_assignment"
-            android:title="ISL Schedule" />
+            android:title="League Schedule" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_library_music"
