--- a/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
+++ b/Aarppo/app/src/main/res/layout/fragment_settings_page.xml
@@ -10,6 +10,9 @@
     tools:context="com.appstory.aarppo.SettingsPage">
 
     <!-- TODO: Update blank fragment layout -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,114 +20,75 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Theyyare Theyyare"
+            android:text="പിടപിടക്കണ നെഞ്ചിലെ തകിലടിക്കണ താളമായ് കളി മൂക്കണൊരീ നേരത്ത് ഇടിമുഴക്കണ ബാന്റുമായ് ചുവടു വെക്കണ കൂട്ടര് വന്നെത്തണ് മൈതാനത്ത്"
             android:id="@+id/textView2"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/textView3"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="22dp" />
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Theyyare Theyyare (2)"
-            android:id="@+id/textView3"
+            android:text="വെടിപൊട്ടാസുണ്ടോ കണ്ണാ മുട്ടിതോൽക്കാൻ നിക്കേണ്ടാ നീ കുതിച്ചോടും കാറ്റിൽ പാറാൻ തിമിർത്താടും പൂരങ്ങളിൽ കെട്ടാമിനി മഞ്ഞക്കൊടീ"
+            android:id="@+id/textView10"
+            android:layout_marginTop="19dp"
             android:layout_below="@+id/textView2"
             android:layout_alignStart="@+id/textView2" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Arabikadalin thirapole"
-            android:id="@+id/textView10"
-            android:layout_below="@+id/textView3"
-            android:layout_alignStart="@+id/textView3"
-            android:layout_marginTop="35dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kuthichu varunnavar aarenno"
-            android:id="@+id/textView12"
-            android:layout_below="@+id/textView10"
-            android:layout_alignStart="@+id/textView10" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="(theyyare theyyare)"
+            android:text="(പടാ.. പടാ...)"
             android:id="@+id/textView13"
-            android:layout_below="@+id/textView12"
-            android:layout_alignStart="@+id/textView12" />
+            android:layout_below="@+id/textView10"
+            android:layout_alignStart="@+id/textView10"
+            android:layout_marginTop="14dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Minnaladikkana vegathil"
+            android:text="അങ്കം വെട്ടിക്കോ ചിങ്കക്കുട്ട്യോളേ ചങ്കിൻ ചങ്കായ് ചേർക്കും മഞ്ഞപ്പട"
             android:id="@+id/textView14"
             android:layout_below="@+id/textView13"
             android:layout_alignStart="@+id/textView13"
-            android:layout_marginTop="21dp" />
+            android:layout_marginTop="19dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Goal adichettanathaarenno"
-            android:id="@+id/textView15"
-            android:layout_below="@+id/textView14"
-            android:layout_alignStart="@+id/textView14" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="(theyyare theyyare)"
+            android:text="(പടാ.. പടാ...)"
             android:id="@+id/textView16"
-            android:layout_below="@+id/textView15"
-            android:layout_alignStart="@+id/textView15" />
+            android:layout_below="@+id/textView14"
+            android:layout_alignStart="@+id/textView14"
+            android:layout_marginTop="18dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nenju virichu kalichu mathikkum"
-            android:id="@+id/textView17"
+            android:text="ഉന്നം തെറ്റാതെ മിന്നൽ പായിച്ചോ കണ്ണിൻ കണ്ണായി കാക്കും മഞ്ഞപ്പട"
+            android:id="@+id/textView19"
             android:layout_below="@+id/textView16"
             android:layout_alignStart="@+id/textView16"
-            android:layout_marginTop="26dp" />
+            android:layout_marginTop="28dp" />
+
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kombanmaaravar kandolu"
-            android:id="@+id/textView18"
-            android:layout_below="@+id/textView17"
-            android:layout_alignStart="@+id/textView17" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kerala Blasters... Kerala Blasters..."
-            android:id="@+id/textView19"
-            android:layout_below="@+id/textView18"
-            android:layout_alignStart="@+id/textView18"
-            android:layout_marginTop="31dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kerala Blasters... Kerala Blasters..."
-            android:id="@+id/textView20"
-            android:layout_below="@+id/textView19"
-            android:layout_alignStart="@+id/textView19"
-            android:layout_marginTop="17dp" />
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id"
-            android:layout_gravity="left|bottom"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:text="കടലല്ലേ.. അലറും കലിയല്ലേ, പടരട്ടേ ശബ്ദം ഉയരേ ഉയരേ.."
+            android:id="@+id/textView3"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
+    </ScrollView>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_gravity="left|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </FrameLayout>
