--- a/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
+++ b/Aarppo/app/src/main/res/menu/activity_blasters_main_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_library_music"
-            android:title="Blasters' Song Lyrics" />
+            android:title="Manjappada Song Lyrics" />
         <item
             android:id="@+id/nav_howtouse"
             android:icon="@drawable/ic_help"
